# crawler

./: Cargo.toml
src/: lib.rs  main.rs  structs.rs
src/collector/: collect.rs  content.rs  elements.rs  mod.rs  request.rs
src/objectid/: id.rs  mod.rs  visitor.rs
