[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "crawler"
path = "src/lib.rs"

[[bin]]
name = "crawler"
path = "src/main.rs"

[dependencies]
html_parser = {git = "https://github.com/alagha-go/html_parser"}
reqwest = {version = "0.11.13", features = ["socks"]}
serde = {version = "1.0", features = ["derive"]}
tokio = { version = "1.21", features = ["full"] }
const_format = "0.2.30"
html-escape = "0.2.12"
serde_json = "1.0.87"
static_init = "1.0.3"
rand = "0.8.5"
hex = "0.4.3"